# trace-benchmark

./: Cargo.toml
configurations/: max.toml  max_hierarchical.toml  max_monoid.toml
data/: gen_measurements.sh
measurements/max/: 100000_keys_10000_per_round.csv  100000_keys_1000_per_round.csv  100000_keys_1_per_round.csv  10000_keys_10000_per_round.csv  10000_keys_1000_per_round.csv  10000_keys_1_per_round.csv  1000_keys_10000_per_round.csv  1000_keys_1000_per_round.csv  1000_keys_1_per_round.csv  100_keys_10000_per_round.csv  100_keys_1000_per_round.csv  100_keys_1_per_round.csv  10_keys_10000_per_round.csv  10_keys_1000_per_round.csv  10_keys_1_per_round.csv  1_keys_10000_per_round.csv  1_keys_1000_per_round.csv  1_keys_1_per_round.csv
measurements/max_hierarchical/: 100000_keys_10000_per_round.csv  100000_keys_1000_per_round.csv  100000_keys_1_per_round.csv  10000_keys_10000_per_round.csv  10000_keys_1000_per_round.csv  10000_keys_1_per_round.csv  1000_keys_10000_per_round.csv  1000_keys_1000_per_round.csv  1000_keys_1_per_round.csv  100_keys_10000_per_round.csv  100_keys_1000_per_round.csv  100_keys_1_per_round.csv  10_keys_10000_per_round.csv  10_keys_1000_per_round.csv  10_keys_1_per_round.csv  1_keys_10000_per_round.csv  1_keys_1000_per_round.csv  1_keys_1_per_round.csv
measurements/max_monoid/: 100000_keys_10000_per_round.csv  100000_keys_1000_per_round.csv  100000_keys_1_per_round.csv  10000_keys_10000_per_round.csv  10000_keys_1000_per_round.csv  10000_keys_1_per_round.csv  (+12 more)
plots/: max.gnuplot  max_hierarchical.gnuplot  max_monoid.gnuplot
src/: lib.rs
